2007-04-13  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Change in amanda-2.5.2
	* ReleaseNotes: Releases Notes for 2.5.2
	* server-src/chunker.c (write_tapeheader): Set errno to ENOSPC.

2007-04-12  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/dumper.c: use fullwrite() instead of write()

2007-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Remove duplicate setsockopt(,,SO_REUSEADDR).
	* common-src/bsd-security.c: Use int for setsockopt.
	* common-src/stream.c (try_socksize): Use int for setsockopt.

2007-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Remove duplicate test.
	* server-src/dumper.c: Use newvstralloc.

2007-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Take value from chunker if it succeed and
				 taper fail.

2007-04-10  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: Use krb5 shared library.

2007-04-10  Dustin J. Mitchell <dustin@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: remove configurability of mt, mtx paths

2007-04-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb5-security.c: Initialize rc->gss_context.

2007-04-09  Dustin J. Mitchell <dustin@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: fix bugs in configuration for mt, mtx paths

2007-04-06  Dustin J. Mitchell <dustin@zmanda.com>
	* oldrecover-src/extract_list.c oldrecover-src/display_commands.c
	  client-src/sendbackup.c client-src/getfsent.c client-src/sendsize.c
	  client-src/selfcheck.c recover-src/amrecover.c recover-src/extract_list.c
	  recover-src/display_commands.c server-src/amlogroll.c
	  server-src/amindexd.c server-src/tapefile.c server-src/amcheck.c
	  server-src/dumper.c server-src/planner.c server-src/reporter.c
	  server-src/amadmin.c server-src/find.c server-src/infofile.c
	  restore-src/amidxtaped.c common-src/security-util.c common-src/amanda.h:
	  improve parsing with strcmp_const and strcmp_const_skip
